c/src/test/resources/c/mini_bnc/valid/func.ctrl
<controlFile>
  <sourceFile name="func.c" id="1" />
  <run>
    <startPosition fileId="1" line="5" />
    <endPosition fileId="1" line="11" />
  </run>
</controlFile>