c/src/test/resources/c/mini_bnc/invalid/absext.ctrl
<controlFile>
  <sourceFile name="absext.c" id="1" />
  <run>
    <startPosition fileId="1" line="11" />
    <endPosition fileId="1" line="16" />
  </run>
</controlFile>